Major Commit to the site.

--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -81,59 +81,265 @@
 
       </div>
     </section>
-	<section id="project" class="about">
-      <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Overview</h2>
-          <p class="justified text-aria">
-		  My team at the Shared Services Center - <i>abbv: SSC </i> <b> (A team that is involved in the finances and business aspects) </b> wanted to restructure the website to increase the number of users and improve the overall usability. The Shared Services Center website suffered from decreased audience because of usability issues like difficulties in content discovery, search relavance, and content structure related issues. Through user research, the aim was to change the existing structure of the website to improve the number of people visiting the website and hence, improve some of the parameters like the amount of time spent by the user on the website, time on each task, efficiency of information retrieval, etc,. In addition, another goal of ours is to provide good content even if the website relatively smaller as compared to other websites.  </p>
+    <section>
+    <div class="container uppermargin">
+
+    			<p class="justified">
+    				<h3><b>What's this about?</b></h3>
+    				<p class=" justified paragraph">
+    					<b class="textbackground3"> The Shared Services Center </b> (<i>abbv: SSC </i>),  is a one stop shop that is involved in the finances and business aspects for the university of Maryland, Baltimore County. </b>
+
+              The Shared Services Center website suffered from decreased audience because of usability issues like difficulties in content discovery, search relavance, and structure related issues.
+
+    				</p>
+    			</p>
+
+    			<h3 class ="uppermargin"><strong>My Role </strong></h3>
+    			<p class="justified paragraph">  User researcher and web developer working in a team comprising of Business and Finance Specialists. I was responsible for carrying out the user research and implementing the findings from the data through front-end web technologies to make the website more usable.</p>
+
+    		<h3 class="uppermargin"><strong>Outcome</strong></h3>
+    		<p class="justified paragraph"> Through user research and web design afterward, we changed the website's existing structure to increase the number of people visiting the website. </p>
+
+        <h3 class="uppermargin"><strong>Goals</strong></h3>
+        <p class="justified paragraph">
+          Improve parameters like <b class="textbackground3">the amount of time spent by the user on the website, Increase the number of users, and reduction in bounce rates.</b> In addition, another goal of ours is to provide good content even if the website was relatively smaller as compared to other websites of the university. </p>
+
+
+    			<img src="assets/img/Personal/SSC Quick Guide.png" class="avatar13 uppermargin" alt="">
+
+
+
+
+
+
+    <h3 class ="uppermargin"><strong>Challenges</strong></h3>
+    <ul><li class="justified paragraph">  Difficult to settle on a single design for the rework.</li>
+    <li class="justified paragraph"> Condensing an already small architecture to accomodate the users needs.</li>
+    <li class="justified paragraph"> Improving content discovery on technical information was time consuming because of the learning associated with it.</li>
+    <li class="justified paragraph">
+      It was the first time I was handling quantitative data, so it took a while for me to learn and apply the concepts.
+    </li>
+    <li class="justified paragraph">
+      Using Wordpress for content management was extremely challenging because it removes any flexibility required by the developer for content that would make the website aesthetically pleasing, or improve the functioning dramatically.
+    </li>
+    </ul>
+
+    </div>
+    </section>
+
+    	<blockquote class="otro-blockquote">
+    		I have been to this website before, so I know what is happening. If I was new, I would just be staring at it. - Participant
+    	</blockquote>
+
+
+    </section>
+
+<section>
+  <div class="container">
+    <h3><b>Older Information Architecture</b></h2>
+      <img src="assets/img/Personal/Architecture_old.png" class="avatar4 uppermargin" alt="">
+    </div>
+</section>
+
+<div class="container">
+	<h3 class ="uppermargin"><strong>UX Research - How do we improve the website?</strong></h3>
+	<p class="justified paragraph">We were on a strict timeline to get the most from a users perspective, combine it with the numbers we had to come up with the redesign.</p>
+	<p class="justified paragraph">Combined with the data obtained from <b class="textbackground3"> Google Analytics </b>	I conducted <b class="textbackground3">User Interviews</b> to observe the users attitude with respect to the website, sent out recommendation question for <b class="textbackground3">NPS Score calculation</b>, Performed <b class="textbackground3">Heuristic Evaluation</b> on the website, <b class="textbackground3">changed the existing Information Architecture</b> to what it is today.
+</div>
+
+  <section>
+    <div class="container">
+  	<div class="containerblue bottompadding">
+  		<h3 class="uppermargin3 color-x" align="center"><Strong>USER INTERVIEWS</Strong></h3>
+  		<p class="justified countermargin" style="color:#fff">
+  			I conducted interviews of people who worked at the university and atleast heard of the Shared Services Center. Experience of people with the website ranged from first time users to people who have seen the website since its inception.
+  		</p>
+  		<div class="row">
+  			<div class="col-md-3 offset-1 facts uppermargin" align="center">
+              <div class="count-box">
+                <i class="icofont-people"></i>
+                <span >5</span>
+                <p style="color:#fff; font-size:14px">Participants Interviewed</p>
+  			  </div>
+  		</div>
+  		<div class="col-md-6 uppermargin countermargin">
+  			<p class="paragraph"  style="color:#fff"><b>Demographic:</b> Faculty, Students, Researchers and Admin Staff. Age: 18+<p>
+
+  				<p class="paragraph" style="color:#fff"><b>Gender:</b> Any</p>
+
+  					<p class="paragraph" style="color:#fff"><b>Ethnicity: </b> Any</p>
+
+  					<p class="paragraph" style="color:#fff"><b>Experience with the website:</b> No Experience to Expert User. </p>
+  				</div>
+  		</div>
+
+
+  		<div class="uppermargin3">
+  			<div class="row">
+  		</div>
+  		<div class="row">
+  			<div class="col-md-4 offset-2">
+  				<h4 class="color-x"><b>#1. Context Issues</b> </h4>
+  			</div>
+  			<div class="col-md-4 ">
+  				<h4 class="color-x"><b>#2. Repetitive Information</b> </h4>
+  			</div>
+  		</div>
+
+
+
+  		<div class="row uppermargin bottompadding">
+  			<div class="col-md-4 offset-2">
+  				<h4 class="color-x"><b>#3. Search Relevancy</b> </h4>
+  			</div>
+  			<div class="col-md-4 ">
+  				<h4 class="color-x"><b>#4. Images tagged as "outdated" and "useless"</b> </h4>
+  			</div>
+  		</div>
+
+  	</div>
+   </div>
+
+<h3 class="uppermargin3" align="center"><b>HEURISTIC EVALUATION</b></h3>
+
+<p class="justified">
+   I took the role of the evaluator and performed Heuristic evaluations on the Shared Services Center Website. To achieve this, I worked to identify  issues with the website, per Nielsen’s Ten Heuristics. I found issues pertinent mainly to search, navigation, and content discovery.
+</p>
+
+
+    <div class="row">
+    <div class="col-md-6">
+      <div class="image uppermargin">
+
+        <figure>
+            <img src="assets/img/Personal/HA.png" class="avatar11" alt="">
+            <figcaption  align="center"><i>Landing Page of the Redesigned Website</i></figcaption>
+          </figure>
         </div>
+      </div>
+      <div class="col-md-6 justified">
+        <h5 class="textbackground3 uppermargin"><b>#1. VISIBILITY OF SYSTEM STATUS</b></h5>
+        <p class="justified">
+          Outdated Images may throw the user off guard and may be one of the main issues that increases the bounce rates.
+        </p>
 
-		 <div class="row">
-          <div class="col-lg-4">
-            <img src="assets/img/Personal/UMBC-SSC-NEW.png" class="img-fluid" alt="">
+        <h5 class="textbackground3 uppermargin"><b>#2: MATCH BETWEEN SYSTEM AND THE REAL WORLD</b></h5>
+        <p class="justified"> The content within the website may be known to the people working in the Shared Services Center, however it may be  difficult for a general audience to comprehend.</p>
+
+        <h5 class="textbackground3 uppermargin"><b>#8: AESTHETIC AND MINIMALIST DESIGN</b></h5>
+        <p class="justified">Images do not link to the information presented in the website.some of the information on the website is repetitive and is a waste of time for the users. Cluttering of content does not help.</p>
+        </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="containerblue bottompadding">
+      <h3 class="uppermargin3 color-x" align="center"><Strong>NET PROMOTER SCORE</Strong></h3>
+      <p class="justified countermargin" style="color:#fff">
+       I reached out to facebook groups, Whatsapp chats, and other forums with college students to know if they would recommend this website or not. The NPS score is a good indicator to tell me if the website needs improvements or not. I sent out the survey twice in a span of 6 months.
+      </p>
+      <div class="row">
+        <div class="col-md-3 offset-1 facts uppermargin" align="center">
+              <div class="count-box">
+                <i class="icofont-people"></i>
+                <span>56</span>
+                <p style="color:#fff; font-size:14px">Survey Respondents</p>
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <p class="justified"><ul>
-              <li class="text-aria"><strong>Categories</strong>: User Research, Website Redesign User-Centered Design</li>
-              <li class="text-aria"><strong>User Base</strong>: Internal Team members, students, and faculty requiring information related to the shared services center. </li>
-              <li class="text-aria"><strong>Project Timeline</strong>: September 2020 - May 2020 </li>
-              <li class="text-aria"><strong>Team Members</strong>: Finance Specialists, Business Associates, Internal HR. </a></li>
-            <li class="text-aria"><strong>Research Methods Used</strong>: Observations, Heuristics, Task analysis, Statistical Analysis (NPS), Time on task.</a></li>
-
-          </ul>
-          </p>
-            <h3>My Role</h3>
-      		  <p class="justified text-aria"> User researcher and web developer responsible for carrying out the research and implementing the findings from the data through front-end web technologies to yield positive results.</p>
-
-            <h3 class="header-aria"><b>Impact</b></h2>
-      		  <p class="justified">
-      			<span class = "text-aria"> Through observations and incorporating quantitative data, the team managed to improve the <b> NPS from 30 - 50</b>. Increase the number of users over a period of 6 months to an all time high of <b>147 users </b> on a single day. In addition to that, the page views have been consistent and the <b> bounce rates currently stand at a low of 27%. </b>  Due to the changes implemeted post user research, the numbers show that the average number of page views was higher than what was before the redesign, with an <b>all time high of 184 page views </b>after the redesign. </span>
-              </div>
-		</div>
-    </section>
+      </div>
+      <div class="col-md-6 uppermargin countermargin"  style="color:#fff">
+        <img src="assets/img/Personal/NPS.png" class="img-fluid" alt="">
+        <div align="center">
 
 
+        <p class="justified paragraph uppermargin"> Promoters - 28
+        </p>
+        <p class="justified paragraph"> Passives - 11</p>
+        <p class="justified paragraph"> Detractors - 17</p>
 
-	 <div class="section-title">
-      <div class="container" data-aos="fade-up">
-	<h2 class="portfolio-title uppermargin">The project</h2>
-
-		  <p class="justified">
-            <span class = "text-aria"> The team at the Shared Services Center  is looking to restructure the website to help guide users better, and help provide the required information with ease.</span> </p>
-
+        <p class="justified paragraph"> Total = 56</p>
+    </div>
           </div>
-          </div>
-		</div>
-    </section>
+      </div>
+
+        <div class="uppermargin countermargin">
+          <h2 class="justified" style="text-align:center; color:#fff"> NPS SCORE = 30.3</h2>
+      </div>
+        </div>
+      </div>
+</div>
+</section>
 
 
-	<section>
-	<div class="container">
-	<h2 style="color:blue"><i>More coming soon... </i> </h2>
-	</div>
-	</section>
+<blockquote class="otro-blockquote">
+  I like this graphic (Referring to the graphic on the homepage). Always catches my attention, graphics. But I really do not know what/why these images on the homepage even exist. - Participant
+</blockquote>
+
+<div class="container">
+  <h3 class="uppermargin3"><Strong>Insights </Strong></h3>
+  <p class="justified paragraph">
+      From the quickfire research conducted, coupled with NPS scores and quantitative data, I gathered the following insights.
+    </p>
+    <ul>
+      <p class="paragraph"><b class="textbackground3">Content Redundancy </b>  Content is repetitive in a lot of places, making the user shy away from the website.</p>
+      <p class="paragraph"><b class="textbackground3">Context </b>Content is littered with jargons and can be simplified.</li>
+      <p class="paragraph"><b class="textbackground3">Links: </b> Images do not have links and some of the text are colored like links but do not function as links.
+      </p>
+      <p class="paragraph"><b class="textbackground3"> Carousel: </b> Carousel is pretty but is unwanted by the users. Feels like it is "just there".
+      </p>
+      <p class="paragraph"><b class="textbackground3">HomePage: </b>Home page appears bland to make users stay on the page.
+      </p>
+      <p class="paragraph">
+        <b class="textbackground3">Content: </b>Content can be made concise to accomodate all the information.
+      </p>
+      <p class="paragraph">
+        <b class="textbackground3">Color: </b>An overwhelming opinion is about changing the color to the either the university colors or an alterative color scheme.</b>
+      </p>
+        <p class="paragraph"><b class="textbackground3">Abbreviations: </b> All abbreviations to be expanded on the website for clarity.
+        </p>
+        <p class="paragraph"><b class="textbackground3">Number of users: </b> Comparitively low for the month. < 100.
+        </p>
+
+    </ul>
+  </p>
+
+  </div>
+
+
+  <section>
+    <div class="container">
+      <h3><b>New Information Architecture</b></h2>
+        <img src="assets/img/Personal/Architecture_new.png" class="avatar4 uppermargin" alt="">
+      </div>
+  </section>
+
+
+  <section>
+    <div class="container">
+      <h3><b>Impact</b></h2>
+      <p class="justified paragraph">Through observations and incorporating quantitative data, the team managed to improve the <b class="textbackground3"> NPS from 30 - 50</b>. </p>
+      <p class="justified paragraph">Increase the number of users over a period of 6 months to an all time high of <b class="textbackground3">181 users </b> for a single month. </p>
+
+      <img src="assets/img/Personal/userdata.png" class="img-fluid uppermargin" alt="">
+
+      <p class="justified paragraph"> The page views have been consistent and the <b class="textbackground3"> bounce rates came to stand at an all time low of 27%. </b> </p>
+
+      <p class="justified paragraph">Due to the changes implemeted post user research, the numbers show that the average number of page views was higher than what was before the redesign, with an <b class="textbackground3">all time high of 1079 page views </b>after the redesign. </p>
+
+    </div>
+
+  <div class="container">
+        <h3 class="uppermargin"><strong>Next Steps</strong></h3>
+        <p class="justified paragraph">As a team, we would be monitoring the data with respect to bounce rates, click rates over the course of the next three months. Following which, we would decide whether to make minjor changes or not.</p>
+
+
+  <h3 class="uppermargin"><b>Takeaways</b></h2>
+  <p class="justified paragraph bottompadding">
+    This was the first job that introduced me to statistical research. I learned that numbers are essential when it comes to any project that deals with completion rates, and bounce rates. A steep learning curve nonetheless, I feel that given the start, I am now empowered with another tool in my research arsenal. This project has taught me to integrate qualitative and quantitative in a short period of time. Something that I look forward to doing in my upcoming works of UX.
+  </p>
+  </div>
+
+  </section>
   </main><!-- End #main -->
 
    <footer id="footer">
