Big Commits to COEIT Research

--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -106,11 +106,9 @@
           Improve parameters like <b class="textbackground3">the amount of time spent by the user on the website, Increase the number of users, and reduction in bounce rates.</b> In addition, another goal of ours is to provide good content even if the website was relatively smaller as compared to other websites of the university. </p>
 
 
-    			<img src="assets/img/Personal/SSC Quick Guide.png" class="avatar13 uppermargin" alt="">
-
-
-
-
+          <figure>
+              <img src="assets/img/Personal/HA.png" class="avatar9" alt="">
+              <figcaption  align="center"><i>Landing Page of the Redesigned Website</i></figcaption>
 
 
     <h3 class ="uppermargin"><strong>Challenges</strong></h3>
@@ -213,8 +211,8 @@
       <div class="image uppermargin">
 
         <figure>
-            <img src="assets/img/Personal/HA.png" class="avatar11" alt="">
-            <figcaption  align="center"><i>Landing Page of the Redesigned Website</i></figcaption>
+          <img src="assets/img/Personal/SSC Quick Guide.png" class="avatar9 uppermargin" alt="">
+            <figcaption  align="center"><i>A SSC subpage.</i></figcaption>
           </figure>
         </div>
       </div>
