--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
   <!-- Template Main CSS File -->
   <link href="assets\css\style.css" rel="stylesheet">
 
+<!-- from figma -->
+<link href="https://fonts.googleapis.com/css?family=Helvetica&display=swap" rel="stylesheet" /><link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet" /><link href="./main.css" rel="stylesheet" />
+
+<!-- figma end -->
+
+
 </head>
 
 <body>
@@ -103,6 +109,10 @@
 
         <div class="services">
           <div class="container">
+
+            <div class="v21_6"><div class="v21_4"><div class="v21_3"><div class="v19_8"><div class="v19_1"></div><span class="v19_3">TRIDENT</span><span class="v19_4">A navigational wearable aid for runners who are blind</span><span class="v19_5">A UMBC-UCI-TOYOTA collaborative project</span><div class="v19_7"></div><span class="v19_6">View Work</span></div><div class="v21_2"></div></div></div><span class="v21_5">01</span></div></body></html>
+
+
             <div class="row portfolio-container" data-aos-delay="200">
 
 
