--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="services">
           <div class="container">
 
-          <div class="v21_6"><div class="v21_4"><div class="v21_3"><div class="v19_8"><div class="v19_1"></div><span class="v19_3">TRIDENT</span><span class="v19_4">A navigational wearable aid for runners who are blind</span><span class="v19_5">A UMBC-UCI-TOYOTA collaborative project</span><div class="v19_7"></div><span class="v19_6">View Work</span></div><div class="v21_2"></div></div></div></div>
+          <!-- <div class="v21_6"><div class="v21_4"><div class="v21_3"><div class="v19_8"><div class="v19_1"></div><span class="v19_3">TRIDENT</span><span class="v19_4">A navigational wearable aid for runners who are blind</span><span class="v19_5">A UMBC-UCI-TOYOTA collaborative project</span><div class="v19_7"></div><span class="v19_6">View Work</span></div><div class="v21_2"></div></div></div></div> -->
 
 
             <div class="row portfolio-container" data-aos-delay="200">
