--- a/index.html
+++ b/index.html
@@ -67,21 +67,18 @@
       <div class="row">
         <div class="col-md-8">
           <h2><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
-
-          <div class="rectangle1 shape2"></div>
-          <div class="rectangle2 shape2"></div>
-          <div class="rectangle3 shape2"></div>
           <h3 class="textbackground2"><b>Welcome to my portfolio!</b></h3>
 
-          <p>I'm an interaction designer who helps build better products, bringing customers and businesses closer to one another.</p>
+          <p>I'm an UX Researcher with a love for accessiblity. </p>
+          <p>I help build better products, bringing customers and businesses closer to one another.</p>
         </div>
         <div class="col-md-3">
           <img src="assets/img/Personal/Ani_New.jpg" class="img-fluid" style="border-radius:100%"  alt="">
         </div>
       </div>
       <div class="social-links">
-        <a href="www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="www.instagram.com/anirudh.nagraj" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.twitter.com/anirudh_nagraj" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.instagram.com/anirudh.nagraj" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.linkedin.com/in/anirudh-nagraj/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
 		<a href="https://medium.com/@nagarajan.anirudh" class="medium"><i class="bx bxl-medium"></i></a>
       </div>
@@ -93,129 +90,104 @@
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
 
-          <h1 class="uppermargin project-title"><b>My Projects</b></h1>
+          <h1 class="uppermargin project-title"><b>My Work</b></h1>
+          <h5 class="bottompadding">The projects below represent the work done in the space of accessibility, HCI and UX research, UX research for the web for various teams within the university, and my master's thesis which is also in the space of accessibility.</h5>
         </div>
 
-        <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center" data-aos-delay="100">
-            <ul id="portfolio-flters">
-              <li class ="hover" data-filter="*" class="filter-active">All</li>
-              <li class ="hover"  data-filter=".filter-app">Accessibility</li>
-              <li class ="hover"  data-filter=".filter-card">Mobile and Web</li>
-              <!-- <li data-filter=".filter-web">Web</li> -->
-            </ul>
-          </div>
-        </div>
-
-        <div class="services">
-          <div class="container">
-
-          <!-- <div class="v21_6"><div class="v21_4"><div class="v21_3"><div class="v19_8"><div class="v19_1"></div><span class="v19_3">TRIDENT</span><span class="v19_4">A navigational wearable aid for runners who are blind</span><span class="v19_5">A UMBC-UCI-TOYOTA collaborative project</span><div class="v19_7"></div><span class="v19_6">View Work</span></div><div class="v21_2"></div></div></div></div> -->
 
 
-            <div class="row portfolio-container" data-aos-delay="200">
+          <div class="container  color-y portfolio-item filter-app uppermargin3">
+            <div class="row bottompadding">
+              <div class="col-md-5 countermargin ">
+                <h1><strong>THE TRIDENT</strong></h1>
+                <div>
 
+                  <p class="paragraph ">A study to build a navigational aid for runners who are blind using Human Centered Design Methods and User Research.
+                  </p>
 
+                  <p class="text-aria"><b>Research Methods: Literature Reviews, Interviews, Affinity Map, Scenario Development, Competitive Analysis, Personas, BodyStorming.</b>
+                  </p>
 
-              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                <div class="icon-box iconbox-blue">
-                  <img src="assets/img/Personal/prototype_color.png" class="img-fluid" alt="">
-                  <h4>TRIDENT</h4>
-                  <p>A navigational wearable aid for runners who are blind</p>
-                  <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'"> View Work </a></button></div>
+                  <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'"> View Work </a></button>
                 </div>
               </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                <div class="icon-box iconbox-orange">
-                  <div class="icon">
-                    <img src="assets/img/Personal/UMBC.png" class="img-fluid" alt="">
-                  </div>
-                  <h4 class="uppermargin">COEIT Research</h4>
-                  <p>User research project of the univeristy's College of Engineering and Information Technology's RESEARCH website.</p>
-                  <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='coeit-research.html'"> View Work </a></button> </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                <div class="icon-box iconbox-pink">
-                  <div class="icon">
-                    <img src="assets/img/Personal/UMBC.png" class="img-fluid" alt="">
-                  </div>
-                  <h4 class="uppermargin">Shared Services Center</h4>
-                  <p>User research project of the SHARED SERVICES CENTER (Payroll and Finances) website.</p>
-                  <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'"> View Work </a></button> </div>
-                </div>
-              </div>
-              <div class="col-lg-4 col-md-6 portfolio-item filter-app filter-card">
-                <div class="icon-box iconbox-yellow">
-                  <img src="assets/img/Personal/appdc.png" class="avatar4" alt="">
-                  <h4>B-AID</h4>
-                  <p>A mobile application prototype for individuals who are visually impaired.</p>
-                  <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='mobileapp.html'"> View Work </a></button> </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-4 portfolio-item filter-app">
-                <div class="icon-box iconbox-teal">
-                      <img src="assets/img/Personal/WC.jpg" class="avatar4" alt="">
-                  <h4 class="hover">Master's Thesis</h4>
-                  <p>Investigating the navigational habits of individuals who are blind in India.</p>
-                  <div class="center"><button class="custom-btn btn-1" onclick="window.location.href='thesis.html'"> View Thesis </a></button> </div>
-                </div>
-              </div>
+              <div class="col-md-5 countermargin">
+                <img src="assets/img/Personal/BodyStorm1.jpeg" class="img-fluid" style="border-radius:2%" alt="">
             </div>
-
-
+             </div>
           </div>
-          <!-- <div class="row portfolio-container">
 
+          <div class="uppermargin3">
+          </div>
 
+          <div class="container color-y portfolio-item filter-card uppermargin">
+            <div class="row bottompadding">
+              <div class="col-md-6 countermargin ">
+                <h1><strong>UMBC - COEIT RESEARCH</strong></h1>
+                <div>
 
+                  <p class="paragraph">Project to provide recommendations for the univeristy's College of Engineering and Information Technology's RESEARCH website through extensive user research.
+                  </p>
 
-          <div class="col-lg-4 col-md-8 d-flex align-items-stretch mt-4 mt-md-0 portfolio-item filter-card" data-aos="zoom-in" data-aos-delay="200">
-          <div class="icon-box iconbox-orange">
-          <div class="icon">
-          <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-          <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
-        </svg>
-        <i class='bx bx-sitemap'></i>
-      </div>
-      <h4><a href="coeit-research.html">Web Research Project #1</a></h4>
-      <p>User research project of the University of Maryland, Baltimore County's College of Engineering and Information Technology's RESEARCH website.</p>
-    </div>
-  </div>
+                  <p class="text-aria"><b>Research Methods: Literature Reviews, Interviews, Contextual Inquiries, Competitive Analysis, Heuristic Evaluations, Rapid Prototyping.</b>
+                  </p>
 
-  <div class="col-lg-4 col-md-8 d-flex align-items-stretch mt-4 mt-lg-0 portfolio-item filter-card" data-aos="zoom-in" data-aos-delay="300">
-  <div class="icon-box iconbox-pink">
-  <div class="icon">
-  <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-  <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,541.5067337569781C382.14930387511276,545.0595476570109,479.8736841581634,548.3450877840088,526.4010558755058,480.5488172755941C571.5218469581645,414.80211281144784,517.5187510058486,332.0715597781072,496.52539010469104,255.14436215662573C477.37192572678356,184.95920475031193,473.57363656557914,105.61284051026155,413.0603344069578,65.22779650032875C343.27470386102294,18.654635553484475,251.2091493199835,5.337323636656869,175.0934190732945,40.62881213300186C97.87086631185822,76.43348514350839,51.98124368387456,156.15599469081315,36.44837278890362,239.84606092416172C21.716077023791087,319.22268207091537,43.775223500013084,401.1760424656574,96.891909868211,461.97329694683043C147.22146801428983,519.5804099606455,223.5754009179313,538.201503339737,300,541.5067337569781"></path>
-</svg>
-<i class='bx bx-analyse'></i>
-</div>
-<h4><a href="">Web research project #2</a></h4>
-<p>User research project of the University of Maryland, Baltimore County's College of Engineering and Information Technology's SHARED SERVICES CENTER website.</p>
-</div>
-</div>
-<div class="col-lg-4 col-md-8 d-flex align-items-stretch mt-4 portfolio-item filter-app" data-aos="zoom-in" data-aos-delay="100">
-<div class="icon-box iconbox-yellow">
-<div class="icon">
-<svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
-<path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,503.46388370962813C374.79870501325706,506.71871716319447,464.8034551963731,527.1746412648533,510.4981551193396,467.86667711651364C555.9287308511215,408.9015244558933,512.6030010748507,327.5744911775523,490.211057578863,256.5855673507754C471.097692560561,195.9906835881958,447.69079081568157,138.11976852964426,395.19560036434837,102.3242989838813C329.3053358748298,57.3949838291264,248.02791733380457,8.279543830951368,175.87071277845988,42.242879143198664C103.41431057327972,76.34704239035025,93.79494320519305,170.9812938413882,81.28167332365135,250.07896920659033C70.17666984294237,320.27484674793965,64.84698225790005,396.69656628748305,111.28512138212992,450.4950937839243C156.20124167950087,502.5303643271138,231.32542653798444,500.4755392045468,300,503.46388370962813"></path>
-</svg>
-<i class='bx bx-mobile-vibration'></i>
-</div>
-<h4><a href="mobileapp.html">B-AID</a></h4>
-<p>A mobile application prototype for individuals who are visually impaired.</p>
-</div>
-</div>
+                  <button class="custom-btn btn-1" onclick="window.location.href='coeit-research.html'"> View Work </a></button>
+                </div>
+              </div>
+              <div class="col-md-4 countermargin">
+                <img src="assets/img/Personal/CR.png" class="img-fluid uppermargin" alt="">
+            </div>
+             </div>
+          </div>
 
+          <div class="uppermargin3">
+          </div>
 
-</div> -->
-</div><!-- End Services Section -->
-</div>
-</div>
+          <div class="container color-y portfolio-item filter-card uppermargin">
+            <div class="row bottompadding">
+              <div class="col-md-6 countermargin">
+                <h1><strong>SHARED SERVICES CENTER WEBSITE REDESIGN</strong></h1>
+                <div>
+
+                  <p class="paragraph">The Shared Services Center Team found it difficult to attract users to their website. This is a project to redesing the existing website using user research and front end web development.
+                  </p>
+
+                  <p class="text-aria"><b>Research Methods: Literature Reviews, Interviews, NPS Score, Statistical Analysis, Heuristic Evaluations</b>
+                  </p>
+
+                  <button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'"> View Work </a></button>
+                </div>
+              </div>
+              <div class="col-md-4 countermargin uppermargin">
+                <img src="assets/img/Personal/HA.png" class="avatar7 uppermargin" alt="">
+            </div>
+             </div>
+          </div>
+
+          <div class="uppermargin3">
+          </div>
+
+          <div class="container color-y portfolio-item filter-app uppermargin">
+            <div class="row bottompadding">
+              <div class="col-md-6 countermargin">
+                <h1><strong>B-AID - THE NAV APP FOR THE BLIND</strong></h1>
+                <div>
+
+                  <p class="paragraph">Globally, millions of people suffer from vision related issues. Passionate as I am for accessibility, the project revolves around creating a mobile application prototype for individuals who are visually impaired relating to their navigation.
+                  </p>
+
+                  <p class="text-aria"><b>Research Methods: Literature Reviews, Interviews, Field Studies, Storyboards, Affinity Map, Empathy map, Personas, Rapid Prototyping. </b>
+                  </p>
+
+                  <button class="custom-btn btn-1" onclick="window.location.href='mobileapp.html'"> View Work </a></button>
+                </div>
+              </div>
+              <div class="col-md-4 countermargin">
+                <img src="assets/img/Personal/Storyboard1.jpg" class="avatar7 uppermargin" alt="">
+            </div>
+             </div>
+          </div>
 </section>
 
 </main><!-- End #main -->
